# keyremap

./: Cargo.toml  README.md
src/: chord.rs  longmod.rs  main.rs  qrkey.rs  single_key.rs
